--- a/connect.ui
+++ b/connect.ui
@@ -65,6 +65,13 @@
       </layout>
      </item>
      <item>
+      <widget class="QCheckBox" name="raw_out_checkbox">
+       <property name="text">
+        <string>Raw Output Mode</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer name="verticalSpacer">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
