--- a/graph_ui.ui
+++ b/graph_ui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>412</width>
-    <height>289</height>
+    <width>592</width>
+    <height>493</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Graph</string>
+   <string>Raw Data</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -28,11 +28,12 @@
      <property name="maximumSize">
       <size>
        <width>400</width>
-       <height>25</height>
+       <height>50</height>
       </size>
      </property>
      <property name="text">
-      <string>This graph is displaying the raw output of the primary amplifier.</string>
+      <string>This graph is displaying the raw output of the primary amplifier. 
+Press 'Run' on the main window to start capturing data.</string>
      </property>
     </widget>
    </item>
