--- a/connect.ui
+++ b/connect.ui
@@ -18,8 +18,8 @@
   </property>
   <property name="maximumSize">
    <size>
-    <width>9999</width>
-    <height>9999</height>
+    <width>16777215</width>
+    <height>16777215</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -151,7 +151,7 @@
             <item>
              <widget class="QLabel" name="label_4">
               <property name="text">
-               <string>Step 1: choose operation mode.</string>
+               <string>Step 1: Choose operation mode.</string>
               </property>
              </widget>
             </item>
