--- a/connect.ui
+++ b/connect.ui
@@ -143,7 +143,7 @@
           </widget>
          </item>
          <item row="0" column="0">
-          <widget class="QFrame" name="verticalFrame_4">
+          <widget class="QFrame" name="mode_select_frame">
            <property name="frameShape">
             <enum>QFrame::Box</enum>
            </property>
